--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: #Your url here
 baseurl: /project
 
 # variables
-name: Your Site Name
-description: Your description here
+name: 5anniversary's resume
+description: 오준현의 이력서입니다.
 google_verification: null
 
 
