--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: /:year:month:day/:title
-url: #Your url here
+url: https://github.com/5anniversary/5anniversary.github.io
 baseurl: /project
 
 # variables
